--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
+    "motion": "^12.4.10",
     "next": "15.0.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
